--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,25 @@
 <!doctype html>
 <html lang="en">
 	<head>
+		<base href="/">
 		<title>Movie Ratings</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
 	</head>
 	<body>
-		<h1>Hello</h1>
+		<app></app>
+
+		<script type="text/javascript" src="vendor/core.min.js"></script>
+		<script type="text/javascript" src="vendor/Reflect.js"></script>
+		<script type="text/javascript" src="vendor/zone.js"></script>
+		<script type="text/javascript" src="vendor/system.js"></script>
+		<script type="text/javascript" src="vendor/systemjs.config.js"></script>
+
+		<script type="text/javascript" src="vendor/jquery.min.js"></script>
+		<script type="text/javascript" src="vendor/bootstrap.min.js"></script>
+		<script>
+			System.import('main.js').catch(function(err){ console.error(err); });
+		</script>
 	</body>
 </html>
