--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,25 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<base href="/">
-		<title>Movie Ratings</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width,initial-scale=1.0">
-		<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
-	</head>
-	<body>
-		<app></app>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Angular QuickStart</title>
+    <base href="/">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
 
-		<script type="text/javascript" src="vendor/core.min.js"></script>
-		<script type="text/javascript" src="vendor/Reflect.js"></script>
-		<script type="text/javascript" src="vendor/zone.js"></script>
-		<script type="text/javascript" src="vendor/system.js"></script>
-		<script type="text/javascript" src="vendor/systemjs.config.js"></script>
+    <!-- Polyfill(s) for older browsers -->
+    <script src="node_modules/core-js/client/shim.min.js"></script>
 
-		<script type="text/javascript" src="vendor/jquery.min.js"></script>
-		<script type="text/javascript" src="vendor/bootstrap.min.js"></script>
-		<script>
-			System.import('main.js').catch(function(err){ console.error(err); });
-		</script>
-	</body>
+    <script src="node_modules/zone.js/dist/zone.js"></script>
+    <script src="node_modules/systemjs/dist/system.src.js"></script>
+
+    <script src="systemjs.config.js"></script>
+    <script>
+      System.import('main.js').catch(function(err){ console.error(err); });
+    </script>
+  </head>
+
+  <body>
+    <my-app>Loading AppComponent content here ...</my-app>
+  </body>
 </html>
