--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Angular QuickStart</title>
+    <title>Movie Ratings</title>
     <base href="/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="css/style.css">
+  </head>
 
-    <!-- Polyfill(s) for older browsers -->
+  <body>
+    <app>Loading</app>
+
+	<!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
 
     <script src="node_modules/zone.js/dist/zone.js"></script>
@@ -17,9 +21,5 @@
     <script>
       System.import('main.js').catch(function(err){ console.error(err); });
     </script>
-  </head>
-
-  <body>
-    <my-app>Loading AppComponent content here ...</my-app>
   </body>
 </html>
